<resources>
    <string name="app_name">20160904</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="submit">提交</string>
    <string name="inten">跳转</string>
    <string name="reback">回显</string>
    <string name="username">Username</string>
    <string name="_1">第1个</string>
    <string name="_2">第2个</string>
    <string name="_3">第3个</string>
    <string name="_4">第4个</string>
    <string name="_5">第5个</string>
    <string name="_6">第6个</string>
    <string name="_7">第7个</string>
    <string name="_8">第8个</string>
    <string name="_9">第9个</string>
    <string name="_10">第10个</string>
    <string name="_11">第11个</string>
    <string name="_12">第12个</string>
    <string name="_13">第13个</string>
    <string name="_14">第14个</string>
    <string name="_15">第15个</string>
    <string name="_16">第16个</string>
    <string name="title_activity_test_bufter">TestBufterActivity</string>
    <string name="radiobutton">RadioButton</string>
    <string name="button">Button</string>
    <string name="checkbox">CheckBox</string>
    <string name="textview">TextView</string>
    <string name="togglebutton">ToggleButton</string>
</resources>
