<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_self_defining"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context="test.wqj.cn.a20160904.CustomizedActivity">

    <test.wqj.cn.a20160904.MyView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/myView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:text="@string/_1"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"/>
        <TextView
            android:text="@string/_2"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_bright"/>
        <TextView
            android:text="@string/_3"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_bright"/>
        <TextView
            android:text="@string/_4"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_purple"/>
        <TextView
            android:text="@string/_5"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_orange_dark"/>
        <TextView
            android:id="@+id/tv6"
            android:text="@string/_6"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:text="@string/_7"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:id="@+id/textView" />
        <TextView
            android:text="@string/_8"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_dark"/>
        <TextView
            android:text="@string/_9"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_orange_dark"/>
        <TextView
            android:text="@string/_10"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_dark"
            android:layout_toLeftOf="@+id/textView"
            android:layout_toStartOf="@+id/textView" />
        <TextView
            android:text="@string/_11"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_light"/>
        <TextView
            android:text="@string/_12"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_purple"/>
        <TextView
            android:text="@string/_13"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_orange_dark"/>
        <TextView
            android:text="@string/_14"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_orange_light"/>
        <TextView
            android:text="@string/_15"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:text="@string/_16"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>
    </test.wqj.cn.a20160904.MyView>
</RelativeLayout>
