<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sqlite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="test.wqj.cn.a20160904.SQLiteActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/input_username"
        android:ems="10"
        android:id="@+id/sql_et1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_text_shape" />

    <Button
        android:text="@string/reback"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:id="@+id/sql_bt2"
        android:background="@drawable/button_shape"
        android:layout_below="@+id/sql_bt1"
        android:layout_alignLeft="@+id/sql_bt1"
        android:layout_alignStart="@+id/sql_bt1" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:id="@+id/sql_bt1"
        android:background="@drawable/button_shape"
        android:layout_below="@+id/sql_et2"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/inten"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:id="@+id/sql_bt3"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_shape"
        android:layout_below="@+id/sql_bt2"
        android:layout_alignLeft="@+id/sql_bt2"
        android:layout_alignStart="@+id/sql_bt2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/input_password"
        android:ems="10"
        android:id="@+id/sql_et2"
        android:background="@drawable/edit_text_shape"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/sql_et1"
        android:layout_alignLeft="@+id/sql_et1"
        android:layout_alignStart="@+id/sql_et1" />
</RelativeLayout>
