<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_spf"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="test.wqj.cn.a20160904.SpfActivity">

    <Button
        android:id="@+id/spf_bt"
        android:layout_width="80sp"
        android:layout_height="40sp"
        android:layout_alignEnd="@+id/spf_tv2"
        android:layout_alignLeft="@+id/spf_tv2"
        android:layout_alignRight="@+id/spf_tv2"
        android:layout_alignStart="@+id/spf_tv2"
        android:layout_below="@+id/spf_tv2"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_shape"
        android:text="@string/submit" />

    <EditText
        android:id="@+id/spf_tv1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/input_username"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/spf_tv2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/input_password"
        android:textSize="18sp"
        android:layout_below="@+id/spf_tv1"
        android:layout_alignLeft="@+id/spf_tv1"
        android:layout_alignStart="@+id/spf_tv1" />

    <Button
        android:text="回显"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_marginTop="13dp"
        android:id="@+id/spf_bt1"
        android:background="@drawable/button_shape"
        android:layout_below="@+id/spf_bt"
        android:layout_alignLeft="@+id/spf_bt"
        android:layout_alignStart="@+id/spf_bt"
        android:layout_alignRight="@+id/spf_bt"
        android:layout_alignEnd="@+id/spf_bt" />

    <Button
        android:text="@string/inten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/spf_bt1"
        android:layout_alignStart="@+id/spf_bt1"
        android:id="@+id/spf_tz"
        android:layout_alignRight="@+id/spf_bt1"
        android:layout_alignEnd="@+id/spf_bt1"
        android:background="@drawable/button_shape" />
</RelativeLayout>
